--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package>
   <name>dct_drone</name>
-  <version>0.0.0</version>
+  <version>0.0.1</version>
   <description>The dct_drone package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="nvidia@todo.todo">nvidia</maintainer>
+  <maintainer email="dct@todo.todo">Duke Conservation Technology</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -42,6 +42,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>gscam</build_depend>
   <run_depend>gscam</run_depend>
+  <run_depend>ar-track-alvar</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
